@@ -1,4 +1,4 @@
- /*
+/*
    Copyright (C) 2001-2012, 2014-2016 Free Software Foundation, Inc.
    Written by Keisuke Nishida, Roger While, Simon Sobisch, Edward Hart
 
@@ -1971,50 +1971,50 @@ field_accept (cob_field *f, const int sline, const int scolumn, cob_field *fgc,
 		getyx (stdscr, cline, ccolumn);
 		/* Trailing prompts. */
 		if (fattr & COB_SCREEN_NO_ECHO) {
-		    prompt_char = COB_CH_SP;
+			prompt_char = COB_CH_SP;
 		} else if (f && COB_FIELD_IS_NUMERIC (f)) {
-		    prompt_char = '0';
+			prompt_char = '0';
 		} else if (fattr & COB_SCREEN_PROMPT) {
-		    prompt_char = promptchar;
+			prompt_char = promptchar;
 		} else {
-		    prompt_char = COB_CH_SP;
+			prompt_char = COB_CH_SP;
 		}
 		for (count = rightpos; (int) count > scolumn - 1; count--) {
-		    /* Get character */
-		    p2 = COB_TERM_BUFF + count - scolumn;
-		    move_char = *p2;
-		    /* Field prompts. */
-		    if (COB_FIELD_IS_NUMERIC (f)) {
-			/* Numeric prompt zeros. */
-			if (move_char == '0') {
-			    cob_move_cursor (cline, count);
-			    cob_addch (prompt_char);
+			/* Get character */
+			p2 = COB_TERM_BUFF + count - scolumn;
+			move_char = *p2;
+			/* Field prompts. */
+			if (COB_FIELD_IS_NUMERIC (f)) {
+				/* Numeric prompt zeros. */
+				if (move_char == '0') {
+					cob_move_cursor (cline, count);
+					cob_addch (prompt_char);
+				} else {
+					/* Switch to remove prompts from within field. */
+					if (fattr & COB_SCREEN_NO_ECHO) {
+						prompt_char = COB_CH_SP;
+					} else if (fattr & COB_SCREEN_SECURE) {
+						prompt_char = COB_CH_AS;
+					} else {
+						prompt_char = '0';
+					}
+				}
 			} else {
-			    /* Switch to remove prompts from within field. */
-			    if (fattr & COB_SCREEN_NO_ECHO) {
-				prompt_char = COB_CH_SP;
-			    } else if (fattr & COB_SCREEN_SECURE) {
-				prompt_char = COB_CH_AS;
-			    } else {
-				prompt_char = '0';
-			    }
+				/* Alpha prompts. */
+				if (move_char == ' ') {
+					cob_move_cursor (cline, count);
+					cob_addch (prompt_char);
+				} else {
+					/* Switch to remove prompts from within field. */
+					if (fattr & COB_SCREEN_NO_ECHO) {
+						prompt_char = COB_CH_SP;
+					} else if (fattr & COB_SCREEN_SECURE) {
+						prompt_char = COB_CH_AS;
+					} else {
+						prompt_char = COB_CH_SP;
+					}
+				}
 			}
-		    } else {
-			/* Alpha prompts. */
-			if (move_char == ' ') {
-			    cob_move_cursor (cline, count);
-			    cob_addch (prompt_char);
-			} else {
-			    /* Switch to remove prompts from within field. */
-			    if (fattr & COB_SCREEN_NO_ECHO) {
-				prompt_char = COB_CH_SP;
-			    } else if (fattr & COB_SCREEN_SECURE) {
-				prompt_char = COB_CH_AS;
-			    } else {
-				prompt_char = COB_CH_SP;
-			    }
-			}
-		    }
 		}
 		/* Cursor to current column. */
 		cob_move_cursor (cline, ccolumn);
@@ -2098,39 +2098,39 @@ field_accept (cob_field *f, const int sline, const int scolumn, cob_field *fgc,
 		case KEY_BACKSPACE:
 			/* Backspace key. */
 			if ((int) ccolumn > scolumn) {
-			    /* Shift remainder left with cursor. */
-			    for (count = ccolumn; count < rightpos + 1; count++) {
-				/* Get character. */
-				p2 = COB_TERM_BUFF + count - scolumn ;
-				move_char = *p2;
-				/* Move the character left. */
-				p2 = COB_TERM_BUFF + count - scolumn - 1;
-				*p2 = move_char;
-				/* Update screen with moved character. */
-				cob_move_cursor (cline, count - 1);
-				if (fattr & COB_SCREEN_NO_ECHO) {
-				    cob_addch (COB_CH_SP);
-				} else if (fattr & COB_SCREEN_SECURE) {
-				    cob_addch (COB_CH_AS);
-				} else {
-				    cob_addch (move_char);
+				/* Shift remainder left with cursor. */
+				for (count = ccolumn; count < rightpos + 1; count++) {
+					/* Get character. */
+					p2 = COB_TERM_BUFF + count - scolumn ;
+					move_char = *p2;
+					/* Move the character left. */
+					p2 = COB_TERM_BUFF + count - scolumn - 1;
+					*p2 = move_char;
+					/* Update screen with moved character. */
+					cob_move_cursor (cline, count - 1);
+					if (fattr & COB_SCREEN_NO_ECHO) {
+						cob_addch (COB_CH_SP);
+					} else if (fattr & COB_SCREEN_SECURE) {
+						cob_addch (COB_CH_AS);
+					} else {
+						cob_addch (move_char);
+					}
 				}
-			    }
-			    /* Put space as the right most character. */
-			    p2 = COB_TERM_BUFF + size_accept - 1;
-			    if (fattr & COB_SCREEN_NO_ECHO) {
-				*p2 = COB_CH_SP;
-			    } else if (COB_FIELD_IS_NUMERIC (f)) {
-				*p2 = '0';
-			    } else {
-				*p2 = COB_CH_SP;
-			}
-			    /* Move cursor left one from current. */
+				/* Put space as the right most character. */
+				p2 = COB_TERM_BUFF + size_accept - 1;
+				if (fattr & COB_SCREEN_NO_ECHO) {
+					*p2 = COB_CH_SP;
+				} else if (COB_FIELD_IS_NUMERIC (f)) {
+					*p2 = '0';
+				} else {
+					*p2 = COB_CH_SP;
+				}
+				/* Move cursor left one from current. */
 				ccolumn--;
-			    cob_move_cursor (cline, ccolumn);
-			    p--;
+				cob_move_cursor (cline, ccolumn);
+				p--;
 			}
-				ateof = 0;
+			ateof = 0;
 			continue;
 		case KEY_HOME:
 			/* Home key, cursor to start of characters. */
@@ -2139,14 +2139,14 @@ field_accept (cob_field *f, const int sline, const int scolumn, cob_field *fgc,
 			move_char = ' ';
 			/* Find non-blank from left. */
 			for (count = scolumn; count <= rightpos; count++) {
-			  /* Get character. */
-			  p2 = COB_TERM_BUFF + count - scolumn;
-			  move_char = *p2;
-			  /* Non blank stop. */
-			  if (move_char != ' ') {
-			    ccolumn = count;
-			    break;
-			  }
+				/* Get character. */
+				p2 = COB_TERM_BUFF + count - scolumn;
+				move_char = *p2;
+				/* Non blank stop. */
+				if (move_char != ' ') {
+					ccolumn = count;
+					break;
+				}
 			}
 			cob_move_cursor (cline, ccolumn);
 			p = COB_TERM_BUFF + ccolumn - scolumn;
@@ -2165,18 +2165,18 @@ field_accept (cob_field *f, const int sline, const int scolumn, cob_field *fgc,
 			move_char = ' ';
 			/* Find non blank from right. */
 			for (count = rightpos; (int) count >= scolumn; count--) {
-			    /* Get character. */
-			    p2 = COB_TERM_BUFF + count - scolumn;
-			    move_char = *p2;
-			    /* Non blank stop. */
-			    if (move_char != ' ') {
-				ccolumn = count;
-				break;
-			    }
+				/* Get character. */
+				p2 = COB_TERM_BUFF + count - scolumn;
+				move_char = *p2;
+				/* Non blank stop. */
+				if (move_char != ' ') {
+					ccolumn = count;
+					break;
+				}
 			}
 			/* Cursor to first blank after. */
 			if (move_char != ' ' && ccolumn != rightpos) {
-			    ccolumn++;
+				ccolumn++;
 			}
 			cob_move_cursor (cline, ccolumn);
 			p = COB_TERM_BUFF + ccolumn - scolumn;
@@ -2226,45 +2226,45 @@ field_accept (cob_field *f, const int sline, const int scolumn, cob_field *fgc,
 			/* Insert key toggle. */
 			/* If off turn on, if on turn off. */
 			if (cobsetptr->cob_insert_mode == 0) {
-			    cobsetptr->cob_insert_mode = 1;     /* on */
-			    /* to do, needs vertical bar cursor */
-			    /* this doesn't seem to work */
-			    count = curs_set(1);
+				cobsetptr->cob_insert_mode = 1;     /* on */
+				/* to do, needs vertical bar cursor */
+				/* this doesn't seem to work */
+				count = curs_set(1);
 			} else {
-			    cobsetptr->cob_insert_mode = 0;     /* off */
-			    /* to do, needs square cursor */
-			    /* this doesn't seem to work */
-			    count = curs_set(2);
+				cobsetptr->cob_insert_mode = 0;     /* off */
+				/* to do, needs square cursor */
+				/* this doesn't seem to work */
+				count = curs_set(2);
 			}
 			continue;
 		case KEY_DC:
 			/* Delete key. */
 			/* Delete character, move remainder left. */
 			for (count = ccolumn; count < rightpos; count++) {
-			    /* Get character one position to right. */
-			    p2 = COB_TERM_BUFF + count - scolumn + 1;
-			    move_char = *p2;
-			    /* Move the character left. */
-			    p2 = COB_TERM_BUFF + count - scolumn;
-			    *p2 = move_char;
-			    /* Update screen with moved character. */
-			    cob_move_cursor (cline, count);
-			    if (fattr & COB_SCREEN_NO_ECHO) {
-				cob_addch (COB_CH_SP);
-			    } else if (fattr & COB_SCREEN_SECURE) {
-				cob_addch (COB_CH_AS);
-					} else {
-				cob_addch (move_char);
-					}
+				/* Get character one position to right. */
+				p2 = COB_TERM_BUFF + count - scolumn + 1;
+				move_char = *p2;
+				/* Move the character left. */
+				p2 = COB_TERM_BUFF + count - scolumn;
+				*p2 = move_char;
+				/* Update screen with moved character. */
+				cob_move_cursor (cline, count);
+				if (fattr & COB_SCREEN_NO_ECHO) {
+					cob_addch (COB_CH_SP);
+				} else if (fattr & COB_SCREEN_SECURE) {
+					cob_addch (COB_CH_AS);
+				} else {
+					cob_addch (move_char);
 				}
+			}
 			/* Put space as the right most character. */
 			p2 = COB_TERM_BUFF + size_accept - 1;
 			if (fattr & COB_SCREEN_NO_ECHO) {
-			    *p2 = COB_CH_SP;
+				*p2 = COB_CH_SP;
 			} else if (COB_FIELD_IS_NUMERIC (f)) {
-			    *p2 = '0';
+				*p2 = '0';
 			} else {
-			    *p2 = COB_CH_SP;
+				*p2 = COB_CH_SP;
 			}
 			/* Put cursor back to original position. */
 			cob_move_cursor (cline, ccolumn);
@@ -2272,24 +2272,24 @@ field_accept (cob_field *f, const int sline, const int scolumn, cob_field *fgc,
 		case KEY_EOL:
 			/* Alt-Delete key, erase cursor to end of field. */
 			for (count = ccolumn; count <= rightpos; count++) {
-			    /* Character position. */
-			    p2 = COB_TERM_BUFF + count - scolumn;
-			    /* Blank character. */
-			    if (fattr & COB_FIELD_IS_NUMERIC (f)) {
-				move_char = '0';
-			    } else {
-				move_char = COB_CH_SP;
-			    }
-			    *p2 = move_char;
-			    /* Update screen with blank character. */
-			    cob_move_cursor (cline, count);
-			    if (fattr & COB_SCREEN_NO_ECHO) {
-				    cob_addch (COB_CH_SP);
-			    } else if (fattr & COB_SCREEN_SECURE) {
-				    cob_addch (COB_CH_AS);
-			    } else {
-				    cob_addch (move_char);
-			    }
+				/* Character position. */
+				p2 = COB_TERM_BUFF + count - scolumn;
+				/* Blank character. */
+				if (fattr & COB_FIELD_IS_NUMERIC (f)) {
+					move_char = '0';
+				} else {
+					move_char = COB_CH_SP;
+				}
+				*p2 = move_char;
+				/* Update screen with blank character. */
+				cob_move_cursor (cline, count);
+				if (fattr & COB_SCREEN_NO_ECHO) {
+					cob_addch (COB_CH_SP);
+				} else if (fattr & COB_SCREEN_SECURE) {
+					cob_addch (COB_CH_AS);
+				} else {
+					cob_addch (move_char);
+				}
 			}
 			/* Put cursor back to original position. */
 			cob_move_cursor (cline, ccolumn);
@@ -2318,29 +2318,29 @@ field_accept (cob_field *f, const int sline, const int scolumn, cob_field *fgc,
 			}
 			/* Insert character. */
 			if (cobsetptr->cob_insert_mode == 1) {
-			    /* Move remainder to the right. */
-			    for (count = rightpos; count > ccolumn - 1; count--) {
-				/* Get character */
-				p2 = COB_TERM_BUFF + count - scolumn - 1;
-				move_char = *p2;
-				/* Move character one right. */
-				p2 = COB_TERM_BUFF + count - scolumn;
-				*p2 = move_char;
-				/* Update screen with moved character. */
-				if ((int) count > scolumn) {
-				    cob_move_cursor (cline, count);
-				    if (move_char != ' ') {
-					if (fattr & COB_SCREEN_NO_ECHO) {
-					    cob_addch (COB_CH_SP);
-					} else if (fattr & COB_SCREEN_SECURE) {
-					    cob_addch (COB_CH_AS);
-					} else {
-					    cob_addch (move_char);
+				/* Move remainder to the right. */
+				for (count = rightpos; count > ccolumn - 1; count--) {
+					/* Get character */
+					p2 = COB_TERM_BUFF + count - scolumn - 1;
+					move_char = *p2;
+					/* Move character one right. */
+					p2 = COB_TERM_BUFF + count - scolumn;
+					*p2 = move_char;
+					/* Update screen with moved character. */
+					if ((int) count > scolumn) {
+						cob_move_cursor (cline, count);
+						if (move_char != ' ') {
+							if (fattr & COB_SCREEN_NO_ECHO) {
+								cob_addch (COB_CH_SP);
+							} else if (fattr & COB_SCREEN_SECURE) {
+								cob_addch (COB_CH_AS);
+							} else {
+								cob_addch (move_char);
+							}
+						}
 					}
-				    }
 				}
-			    }
-			    cob_move_cursor (cline, ccolumn);
+				cob_move_cursor (cline, ccolumn);
 			}
 			*p = (unsigned char)keyp;
 			count = 1;
@@ -2371,7 +2371,7 @@ field_accept (cob_field *f, const int sline, const int scolumn, cob_field *fgc,
 		(void)flushinp ();
 		cob_beep ();
 	}
-field_return:
+ field_return:
 	if (f) {
 		cob_move_cursor (sline, rightpos + 1);
 	}
